--- a/web/style/staffView.scss
+++ b/web/style/staffView.scss
@@ -58,7 +58,7 @@ body, html{
   border: 3px solid #712177;
   margin-right: 3rem;
   margin-bottom: 3rem;
-  width: 20%;
+  width: auto;
   justify-content: center;
 }
 
@@ -102,8 +102,19 @@ body, html{
 }
 
 .bigContainer{
+  margin-right: 5rem;
+  margin-top: 3rem;
+  justify-content: center;
+}
+
+.bigContainerLists{
+
   display: flex;
   justify-content: center;
+}
+
+.superContainer{
+  display: flex;
 }
 
 .name{
@@ -117,8 +128,7 @@ body, html{
   background-image: url("../img/event.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+  background-attachment: local;
   margin-bottom: 200px;
 }
 
