--- a/web/style/eventView.css
+++ b/web/style/eventView.css
@@ -81,6 +81,12 @@ body, html {
   margin: 2rem;
   color: #712177; }
 
+.infoContainerStaff a {
+  display: flex;
+  font-size: 24px;
+  margin: 2rem;
+  color: #712177; }
+
 .bigContainer {
   display: flex;
   justify-content: center; }
