--- a/web/style/eventView.scss
+++ b/web/style/eventView.scss
@@ -107,6 +107,13 @@ body, html{
   color: #712177;
 }
 
+.infoContainerStaff a{
+  display: flex;
+  font-size: 24px;
+  margin: 2rem;
+  color: #712177;
+}
+
 .bigContainer{
   display: flex;
   justify-content: center;
